# eguitty

./: Cargo.toml  Cargo.toml.old  README.md
src/: app.rs  main.rs
src/gui/: definitions.rs  mod.rs
