[package]
name = "eguitty"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.26"
egui = { version = "0.26", features = ["serde"] }
egui-terminal = { git = "https://github.com/quinntyx/egui-terminal" }
egui_dock = "0.11.2"
ron = "0.8.1"

[profile.dev]
opt-level = 3

[profile.dev.package.'*']
opt-level = 3