[package]
name = "eguitty"
version = "0.2.1"
edition = "2021"
license = "GPL-3.0-or-later"
description = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.26", default-features = false, features = ["wgpu", "accesskit", "default_fonts", "wayland", "web_screen_reader", "x11", "serde"], git = "https://github.com/quinntyx/egui" }
egui = { version = "0.26", features = ["serde"], git = "https://github.com/quinntyx/egui" }
egui-terminal = { git = "https://github.com/quinntyx/egui-terminal", features = ["serde", "serde-hexcolor"] }
egui_dock = { version = "0.11.2", features = ["serde"], path = "../egui_dock" }
ron = "0.8.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[profile.dev]
opt-level = 3

[profile.dev.package.'*']
opt-level = 3
